--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,13 +14,13 @@ jobs:
 # Set docker image names.
     - name: Setup env variables
       run: |
-        echo "DOCKER_SERVICE=kvalitetsit/kithugs" >> $GITHUB_ENV
-        echo "DOCKER_DOCUMENTATION=kvalitetsit/kithugs-documentation" >> $GITHUB_ENV
+        echo "DOCKER_SERVICE=kvalitetsit/kithugs-releases" >> $GITHUB_ENV
+        echo "DOCKER_DOCUMENTATION=kvalitetsit/kithugs-releases-documentation" >> $GITHUB_ENV
 
 # Checkout source code
     - uses: actions/checkout@v2
 
-# Fail if DOCKER_SERVICE is kithugs and repo is not kithugs. This step can be deleted once
+# Fail if DOCKER_SERVICE is kithugs-releases and repo is not kithugs-releases. This step can be deleted once
     - name: Initial build
       run: ./build/failOnFirstBuild.sh
 
@@ -69,50 +69,50 @@ jobs:
         name: jacoco-report
         path: testreport/target/site/jacoco-aggregate/
 
-    - name: Tag service dev docker image
-      run: ./build/docker-tag.sh ${{ env.DOCKER_SERVICE }}:latest ${{ env.DOCKER_SERVICE }}:dev
-
-    - name: Push service dev docker image
-      run: ./build/docker-push.sh ${{ env.DOCKER_SERVICE }}:dev
-
-    - name: Tag service git id docker image
-      run: ./build/docker-tag.sh ${{ env.DOCKER_SERVICE }}:latest ${{ env.DOCKER_SERVICE }}:${{ github.sha }}
-
-    - name: Push service git id docker image.
-      run: ./build/docker-push.sh ${{ env.DOCKER_SERVICE }}:${{ github.sha }}
-
-    - name: Tag documentation dev docker image
-      run: ./build/docker-tag.sh ${{ env.DOCKER_DOCUMENTATION }}:latest ${{ env.DOCKER_DOCUMENTATION }}:dev
-
-    - name: Push documentation dev docker image
-      run: ./build/docker-push.sh ${{ env.DOCKER_DOCUMENTATION }}:dev
-
-    - name: Tag documentation git id docker image
-      run: ./build/docker-tag.sh ${{ env.DOCKER_DOCUMENTATION }}:latest ${{ env.DOCKER_DOCUMENTATION }}:${{ github.sha }}
-
-    - name: Push documentation git id docker image.
-      run: ./build/docker-push.sh ${{ env.DOCKER_DOCUMENTATION }}:${{ github.sha }}
-
-    - name: Push latest service docker image
-      if: ${{ steps.tag.conclusion != 'skipped' }}
-      run: ./build/docker-push.sh ${{ env.DOCKER_SERVICE }}:latest
-
-    - name: Tag version service docker image
-      if: ${{ steps.tag.conclusion != 'skipped' }}
-      run: ./build/docker-tag.sh ${{ env.DOCKER_SERVICE }}:latest ${{ env.DOCKER_SERVICE }}:${{ steps.tag.outputs.VERSION }}
-
-    - name: Push version service docker image.
-      if: ${{ steps.tag.conclusion != 'skipped' }}
-      run: ./build/docker-push.sh ${{ env.DOCKER_SERVICE }}:${{ steps.tag.outputs.VERSION }}
-
-    - name: Push latest documentation docker image
-      if: ${{ steps.tag.conclusion != 'skipped' }}
-      run: ./build/docker-push.sh ${{ env.DOCKER_DOCUMENTATION }}:latest
-
-    - name: Tag version documentation docker image
-      if: ${{ steps.tag.conclusion != 'skipped' }}
-      run: ./build/docker-tag.sh ${{ env.DOCKER_DOCUMENTATION }}:latest ${{ env.DOCKER_DOCUMENTATION }}:${{ steps.tag.outputs.VERSION }}
-
-    - name: Push version documentation docker image.
-      if: ${{ steps.tag.conclusion != 'skipped' }}
-      run: ./build/docker-push.sh ${{ env.DOCKER_DOCUMENTATION }}:${{ steps.tag.outputs.VERSION }}
+#    - name: Tag service dev docker image
+#      run: ./build/docker-tag.sh ${{ env.DOCKER_SERVICE }}:latest ${{ env.DOCKER_SERVICE }}:dev
+#
+#    - name: Push service dev docker image
+#      run: ./build/docker-push.sh ${{ env.DOCKER_SERVICE }}:dev
+#
+#    - name: Tag service git id docker image
+#      run: ./build/docker-tag.sh ${{ env.DOCKER_SERVICE }}:latest ${{ env.DOCKER_SERVICE }}:${{ github.sha }}
+#
+#    - name: Push service git id docker image.
+#      run: ./build/docker-push.sh ${{ env.DOCKER_SERVICE }}:${{ github.sha }}
+#
+#    - name: Tag documentation dev docker image
+#      run: ./build/docker-tag.sh ${{ env.DOCKER_DOCUMENTATION }}:latest ${{ env.DOCKER_DOCUMENTATION }}:dev
+#
+#    - name: Push documentation dev docker image
+#      run: ./build/docker-push.sh ${{ env.DOCKER_DOCUMENTATION }}:dev
+#
+#    - name: Tag documentation git id docker image
+#      run: ./build/docker-tag.sh ${{ env.DOCKER_DOCUMENTATION }}:latest ${{ env.DOCKER_DOCUMENTATION }}:${{ github.sha }}
+#
+#    - name: Push documentation git id docker image.
+#      run: ./build/docker-push.sh ${{ env.DOCKER_DOCUMENTATION }}:${{ github.sha }}
+#
+#    - name: Push latest service docker image
+#      if: ${{ steps.tag.conclusion != 'skipped' }}
+#      run: ./build/docker-push.sh ${{ env.DOCKER_SERVICE }}:latest
+#
+#    - name: Tag version service docker image
+#      if: ${{ steps.tag.conclusion != 'skipped' }}
+#      run: ./build/docker-tag.sh ${{ env.DOCKER_SERVICE }}:latest ${{ env.DOCKER_SERVICE }}:${{ steps.tag.outputs.VERSION }}
+#
+#    - name: Push version service docker image.
+#      if: ${{ steps.tag.conclusion != 'skipped' }}
+#      run: ./build/docker-push.sh ${{ env.DOCKER_SERVICE }}:${{ steps.tag.outputs.VERSION }}
+#
+#    - name: Push latest documentation docker image
+#      if: ${{ steps.tag.conclusion != 'skipped' }}
+#      run: ./build/docker-push.sh ${{ env.DOCKER_DOCUMENTATION }}:latest
+#
+#    - name: Tag version documentation docker image
+#      if: ${{ steps.tag.conclusion != 'skipped' }}
+#      run: ./build/docker-tag.sh ${{ env.DOCKER_DOCUMENTATION }}:latest ${{ env.DOCKER_DOCUMENTATION }}:${{ steps.tag.outputs.VERSION }}
+#
+#    - name: Push version documentation docker image.
+#      if: ${{ steps.tag.conclusion != 'skipped' }}
+#      run: ./build/docker-push.sh ${{ env.DOCKER_DOCUMENTATION }}:${{ steps.tag.outputs.VERSION }}
