--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,3 +116,8 @@ jobs:
 #    - name: Push version documentation docker image.
 #      if: ${{ steps.tag.conclusion != 'skipped' }}
 #      run: ./build/docker-push.sh ${{ env.DOCKER_DOCUMENTATION }}:${{ steps.tag.outputs.VERSION }}
+    - uses: "marvinpinto/action-automatic-releases@latest"
+      if: ${{ steps.tag.conclusion != 'skipped' }}
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        prerelease: false
