--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,12 +82,20 @@ jobs:
 #    - name: Push version documentation docker image.
 #      if: ${{ steps.tag.conclusion != 'skipped' }}
 #      run: ./build/docker-push.sh ${{ env.DOCKER_DOCUMENTATION }}:${{ steps.tag.outputs.VERSION }}
+
+#   NEDENSTÅENDE ER OK
 #    - uses: "marvinpinto/action-automatic-releases@latest"
 #      if: ${{ steps.tag.conclusion != 'skipped' }}
 #      with:
 #        repo_token: "${{ secrets.GITHUB_TOKEN }}"
 #        prerelease: false
 #
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      if: ${{ steps.tag.conclusion != 'skipped' }}
+#   NEDENSTÅENDE ER TRÆLS
+#    - name: Release
+#      uses: softprops/action-gh-release@v1
+#      if: ${{ steps.tag.conclusion != 'skipped' }}
+#
+    - uses: ncipollo/release-action@v1
+      with:
+        if: ${{ steps.tag.conclusion != 'skipped' }}
+        token: ${{ secrets.GITHUB_TOKEN }}
