--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,12 +91,15 @@ jobs:
 #        prerelease: false
 #
 #   NEDENSTÅENDE ER TRÆLS
-#    - name: Release
-#      uses: softprops/action-gh-release@v1
-#      if: ${{ steps.tag.conclusion != 'skipped' }}
-#
-    - uses: ncipollo/release-action@v1
+    - name: Release
+      uses: softprops/action-gh-release@v1
       if: ${{ steps.tag.conclusion != 'skipped' }}
       with:
-        generateReleaseNotes: true
-        token: ${{ secrets.GITHUB_TOKEN }}
+        generate_release_notes: true
+
+#
+#    - uses: ncipollo/release-action@v1
+#      if: ${{ steps.tag.conclusion != 'skipped' }}
+#      with:
+#        generateReleaseNotes: true
+#        token: ${{ secrets.GITHUB_TOKEN }}
