More release testing.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,8 +94,8 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v1
       if: ${{ steps.tag.conclusion != 'skipped' }}
-      with:
-        generate_release_notes: true
+#      with:
+#        generate_release_notes: true
 
 #
 #    - uses: ncipollo/release-action@v1
