--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,12 +82,24 @@ jobs:
 #    - name: Push version documentation docker image.
 #      if: ${{ steps.tag.conclusion != 'skipped' }}
 #      run: ./build/docker-push.sh ${{ env.DOCKER_DOCUMENTATION }}:${{ steps.tag.outputs.VERSION }}
+
+#   NEDENSTÅENDE ER OK
 #    - uses: "marvinpinto/action-automatic-releases@latest"
 #      if: ${{ steps.tag.conclusion != 'skipped' }}
 #      with:
 #        repo_token: "${{ secrets.GITHUB_TOKEN }}"
 #        prerelease: false
-
+#
+#   NEDENSTÅENDE ER TRÆLS
     - name: Release
       uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
+      if: ${{ steps.tag.conclusion != 'skipped' }}
+#      with:
+#        generate_release_notes: true
+
+#
+#    - uses: ncipollo/release-action@v1
+#      if: ${{ steps.tag.conclusion != 'skipped' }}
+#      with:
+#        generateReleaseNotes: true
+#        token: ${{ secrets.GITHUB_TOKEN }}
