--- a/.github/release.yml
+++ b/.github/release.yml
@@ -1,18 +1,8 @@
 changelog:
   exclude:
-    labels:
-      - ignore-for-release
     authors:
-      - octocat
+      - kitautomation
   categories:
-    - title: Breaking Changes 🛠
-      labels:
-        - Semver-Major
-        - breaking-change
-    - title: Exciting New Features 🎉
-      labels:
-        - Semver-Minor
-        - enhancement
-    - title: Other Changes blah
+    - title: Changes
       labels:
         - "*"
